using UnityEngine;
using System.Collections;

namespace Zedarus.ToolKit.UI
{
	public class IDs
	{
		public struct Animation
		{
			public const string OpenTrigger = "Open";
			public const string CloseTrigger = "Close";
			public const string OpenAnimationSpeedScale = "OpenAnimationSpeedScale";
			public const string CloseAnimationSpeedScale = "CloseAnimationSpeedScale";
		}
	}
}
